Estrutura de fluxo, Entrada e saída de dados

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <h1>Ola Git</h1>
-    
+    <h1>Aplicando JavaScript no HTML</h1>
+    <p id="my-app"></p>
+    <!-- <script src="01-variaveis-operadores/myScriptBasico.js"></script> -->
+    <!-- <script src="02-fluxo-controle/myScriptFluxoDados.js"></script> -->
+    <script src="03-entrada-saida-dados/myScriptEntradaSaidaDados.js"></script>
+   
 </body>
 </html>
