--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body> 
     <h1>Aplicando JavaScript no HTML</h1>
     <p id="my-app"></p>
+   
     <!-- <script src="01-variaveis-operadores/myScriptBasico.js"></script> -->
     <!-- <script src="02-fluxo-controle/myScriptFluxoDados.js"></script> -->
-    <!-- <script src="03-entrada-saida-dados/myScriptEntradaSaidaDados.js"></script> -->
+    <script src="03-entrada-saida-dados/myScriptEntradaSaidaDados.js"></script>
     <!-- <script src="04-objetos/myScriptObjetos.js"></script> -->
-    <script src="05-funcoes/myScriptFunctions.js"></script>
-   
+    <!-- <script src="05-funcoes/myScriptFunctions.js"></script> -->
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
