--- a/07-dom/index.html
+++ b/07-dom/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>DOM</title>
 </head>
 <body>
     <p id="conteudo">Meu Conteudo JS</p>
+    <h5 id="dados"></h5>
+    <hr>
+    <label>Nome</label>
+    <input type="text" id="nome" value="Lambarildo Peixe">
     <script src="myScriptDom.js"></script>
 </body>
 </html>
