--- a/08 - eventos/index.html
+++ b/08 - eventos/index.html
@@ -10,6 +10,10 @@
     <label>Nome</label>
     <input type="text" id="nome">
     <button id="enviar">Enviar</button>
+    <hr>
+    <label>Entrada Dados</label>
+    <input type="text" id="entradaDados">
+    <button onclick="enviar()">Enviar</button>
     <script src="myScripEventos.js"></script>
 </body>
 </html>
